src/Parser.java
/* Generated By:JJTree&JavaCC: Do not edit this line. Parser.java */
import java.io.*;

public class Parser/*@bgen(jjtree)*/implements ParserTreeConstants, ParserConstants {/*@bgen(jjtree)*/
  protected static JJTParserState jjtree = new JJTParserState();

  static final public ASTLispNode prog() throws ParseException {
 /*@bgen(jjtree) LispNode */
  ASTLispNode jjtn000 = new ASTLispNode(JJTLISPNODE);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);String s;
    try {
      if (jj_2_1(2)) {
        s = list();

      } else {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case NIL:
        case INTEGER:
        case FLOAT:
        case LAMBDA:
        case LET:
        case LETREC:
        case ADD_OP:
        case SUB_OP:
        case CAR:
        case CDR:
        case CONS:
        case IDENTIFIER:
          s = atom();

          break;
        default:
          jj_la1[0] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
          jjtree.closeNodeScope(jjtn000, true);
          jjtc000 = false;
          jjtn000.name = "root"; {if (true) return jjtn000;}
    } catch (Throwable jjte000) {
          if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
    throw new Error("Missing return statement in function");
  }

  static final public String list() throws ParseException {
 /*@bgen(jjtree) List */
  ASTList jjtn000 = new ASTList(JJTLIST);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);String s; String ret = "";
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case LPAR:
            ret += "(";
        jj_consume_token(LPAR);
        label_1:
        while (true) {
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case NIL:
          case LPAR:
          case TICK:
          case INTEGER:
          case FLOAT:
          case LAMBDA:
          case LET:
          case LETREC:
          case ADD_OP:
          case SUB_OP:
          case CAR:
          case CDR:
          case CONS:
          case IDENTIFIER:
            ;
            break;
          default:
            jj_la1[1] = jj_gen;
            break label_1;
          }
          if (jj_2_2(2)) {
            s = list();
                                           ret += s;
          } else {
            switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
            case NIL:
            case INTEGER:
            case FLOAT:
            case LAMBDA:
            case LET:
            case LETREC:
            case ADD_OP:
            case SUB_OP:
            case CAR:
            case CDR:
            case CONS:
            case IDENTIFIER:
              s = atom();
                               ret += s + " ";
              break;
            default:
              jj_la1[2] = jj_gen;
              jj_consume_token(-1);
              throw new ParseException();
            }
          }
        }
        jj_consume_token(RPAR);
        break;
      case TICK:
            ret += "'(";
        jj_consume_token(TICK);
        jj_consume_token(LPAR);
        label_2:
        while (true) {
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case NIL:
          case LPAR:
          case TICK:
          case INTEGER:
          case FLOAT:
          case LAMBDA:
          case LET:
          case LETREC:
          case ADD_OP:
          case SUB_OP:
          case CAR:
          case CDR:
          case CONS:
          case IDENTIFIER:
            ;
            break;
          default:
            jj_la1[3] = jj_gen;
            break label_2;
          }
          if (jj_2_3(2)) {
            s = list();
                                           ret += s;
          } else {
            switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
            case NIL:
            case INTEGER:
            case FLOAT:
            case LAMBDA:
            case LET:
            case LETREC:
            case ADD_OP:
            case SUB_OP:
            case CAR:
            case CDR:
            case CONS:
            case IDENTIFIER:
              s = atom();
                               ret += s + " ";
              break;
            default:
              jj_la1[4] = jj_gen;
              jj_consume_token(-1);
              throw new ParseException();
            }
          }
        }
        jj_consume_token(RPAR);
        break;
      default:
        jj_la1[5] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
          jjtree.closeNodeScope(jjtn000, true);
          jjtc000 = false;
                ret += ") ";
                jjtn000.name = ret;
                jjtn000.type = "list";
                {if (true) return ret;}
    } catch (Throwable jjte000) {
          if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
    throw new Error("Missing return statement in function");
  }

  static final public String atom() throws ParseException {
 /*@bgen(jjtree) Atom */
  ASTAtom jjtn000 = new ASTAtom(JJTATOM);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);Token n; String l;
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case NIL:
        n = jj_consume_token(NIL);
                          jjtree.closeNodeScope(jjtn000, true);
                          jjtc000 = false;
                          jjtn000.name = n.image; jjtn000.type = "nil"; jjtn000.value = null; {if (true) return n.image;}
        break;
      case INTEGER:
        n = jj_consume_token(INTEGER);
                                  jjtree.closeNodeScope(jjtn000, true);
                                  jjtc000 = false;
                                  jjtn000.name = n.image; jjtn000.type = "int"; jjtn000.value = n.getValue(); {if (true) return n.image;}
        break;
      case FLOAT:
        n = jj_consume_token(FLOAT);
                                  jjtree.closeNodeScope(jjtn000, true);
                                  jjtc000 = false;
                          jjtn000.name = n.image; jjtn000.type = "float"; jjtn000.value = n.getValue(); {if (true) return n.image;}
        break;
      case IDENTIFIER:
        n = jj_consume_token(IDENTIFIER);
                                  jjtree.closeNodeScope(jjtn000, true);
                                  jjtc000 = false;
                                  jjtn000.name = n.image; jjtn000.type = "ident"; {if (true) return n.image;}
        break;
      case LAMBDA:
        n = jj_consume_token(LAMBDA);
                                  jjtree.closeNodeScope(jjtn000, true);
                                  jjtc000 = false;
                                  jjtn000.name = n.image; jjtn000.type = "lambda"; l = lambdaExpr(); {if (true) return "lambda" + l;}
        break;
      case ADD_OP:
        n = jj_consume_token(ADD_OP);
                                  jjtree.closeNodeScope(jjtn000, true);
                                  jjtc000 = false;
                                  jjtn000.name = n.image; jjtn000.type = "operator"; l = addExpr(); {if (true) return n.image + l;}
        break;
      case SUB_OP:
        n = jj_consume_token(SUB_OP);
                                  jjtree.closeNodeScope(jjtn000, true);
                                  jjtc000 = false;
                                  jjtn000.name = n.image; jjtn000.type = "operator"; l = subExpr(); {if (true) return n.image + l;}
        break;
      case CAR:
        n = jj_consume_token(CAR);
                                  jjtree.closeNodeScope(jjtn000, true);
                                  jjtc000 = false;
                                  jjtn000.name = n.image; jjtn000.type = "car"; l = car(); {if (true) return n.image + l;}
        break;
      case CDR:
        n = jj_consume_token(CDR);
                                  jjtree.closeNodeScope(jjtn000, true);
                                  jjtc000 = false;
                                  jjtn000.name = n.image; jjtn000.type = "cdr"; l = cdr(); {if (true) return n.image + l;}
        break;
      case CONS:
        n = jj_consume_token(CONS);
                                  jjtree.closeNodeScope(jjtn000, true);
                                  jjtc000 = false;
                                  jjtn000.name = n.image; jjtn000.type = "cons"; l = cons(); {if (true) return n.image + l;}
        break;
      case LET:
        n = jj_consume_token(LET);
                                  jjtree.closeNodeScope(jjtn000, true);
                                  jjtc000 = false;
                                  jjtn000.name = n.image; jjtn000.type = "let"; l = let(); {if (true) return n.image + l;}
        break;
      case LETREC:
        n = jj_consume_token(LETREC);
                                  jjtree.closeNodeScope(jjtn000, true);
                                  jjtc000 = false;
                                  jjtn000.name = n.image; jjtn000.type = "let"; l = let(); {if (true) return n.image + l;}
        break;
      default:
        jj_la1[6] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    } finally {
        if (jjtc000) {
          jjtree.closeNodeScope(jjtn000, true);
        }
    }
    throw new Error("Missing return statement in function");
  }

  static final public String car() throws ParseException {
 /*@bgen(jjtree) car */
  ASTcar jjtn000 = new ASTcar(JJTCAR);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);String s; String ret = " ";
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case LPAR:
      case TICK:
        s = list();
                             ret += s;
        break;
      case NIL:
      case INTEGER:
      case FLOAT:
      case LAMBDA:
      case LET:
      case LETREC:
      case ADD_OP:
      case SUB_OP:
      case CAR:
      case CDR:
      case CONS:
      case IDENTIFIER:
        s = atom();
                               ret += s;
        break;
      default:
        jj_la1[7] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
          jjtree.closeNodeScope(jjtn000, true);
          jjtc000 = false;
          jjtn000.name = ret; jjtn000.type = "car"; {if (true) return ret;}
    } catch (Throwable jjte000) {
          if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
    throw new Error("Missing return statement in function");
  }

  static final public String cdr() throws ParseException {
 /*@bgen(jjtree) cdr */
  ASTcdr jjtn000 = new ASTcdr(JJTCDR);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);String s; String ret = " ";
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case LPAR:
      case TICK:
        s = list();
                             ret += s;
        break;
      case NIL:
      case INTEGER:
      case FLOAT:
      case LAMBDA:
      case LET:
      case LETREC:
      case ADD_OP:
      case SUB_OP:
      case CAR:
      case CDR:
      case CONS:
      case IDENTIFIER:
        s = atom();
                               ret += s;
        break;
      default:
        jj_la1[8] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
          jjtree.closeNodeScope(jjtn000, true);
          jjtc000 = false;
          jjtn000.name = ret; jjtn000.type = "cdr"; {if (true) return ret;}
    } catch (Throwable jjte000) {
          if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
    throw new Error("Missing return statement in function");
  }

  static final public String cons() throws ParseException {
 /*@bgen(jjtree) cons */
  ASTcons jjtn000 = new ASTcons(JJTCONS);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);String s; String t; String ret = " ";
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case LPAR:
      case TICK:
        s = list();
                             ret += s;
        break;
      case NIL:
      case INTEGER:
      case FLOAT:
      case LAMBDA:
      case LET:
      case LETREC:
      case ADD_OP:
      case SUB_OP:
      case CAR:
      case CDR:
      case CONS:
      case IDENTIFIER:
        s = atom();
                               ret += s;
        break;
      default:
        jj_la1[9] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case LPAR:
      case TICK:
        t = list();
                             ret += t;
        break;
      case NIL:
      case INTEGER:
      case FLOAT:
      case LAMBDA:
      case LET:
      case LETREC:
      case ADD_OP:
      case SUB_OP:
      case CAR:
      case CDR:
      case CONS:
      case IDENTIFIER:
        t = atom();
                               ret +=" "+ t;
        break;
      default:
        jj_la1[10] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
          jjtree.closeNodeScope(jjtn000, true);
          jjtc000 = false;
          jjtn000.name = ret; jjtn000.type = "cons"; {if (true) return ret;}
    } catch (Throwable jjte000) {
          if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
    throw new Error("Missing return statement in function");
  }

  static final public String addExpr() throws ParseException {
 /*@bgen(jjtree) AddExpr */
  ASTAddExpr jjtn000 = new ASTAddExpr(JJTADDEXPR);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);String s; String t; String ret = "";
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case LPAR:
      case TICK:
        s = list();
                             ret += s;
        break;
      case NIL:
      case INTEGER:
      case FLOAT:
      case LAMBDA:
      case LET:
      case LETREC:
      case ADD_OP:
      case SUB_OP:
      case CAR:
      case CDR:
      case CONS:
      case IDENTIFIER:
        s = atom();
                               ret +=" "+ s;
        break;
      default:
        jj_la1[11] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case LPAR:
      case TICK:
        t = list();
                             ret += t;
        break;
      case NIL:
      case INTEGER:
      case FLOAT:
      case LAMBDA:
      case LET:
      case LETREC:
      case ADD_OP:
      case SUB_OP:
      case CAR:
      case CDR:
      case CONS:
      case IDENTIFIER:
        t = atom();
                               ret +=" "+ t;
        break;
      default:
        jj_la1[12] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
          jjtree.closeNodeScope(jjtn000, true);
          jjtc000 = false;
          jjtn000.name = ret; jjtn000.type = "AddExpr"; {if (true) return ret;}
    } catch (Throwable jjte000) {
          if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
    throw new Error("Missing return statement in function");
  }

  static final public String subExpr() throws ParseException {
 /*@bgen(jjtree) SubExpr */
  ASTSubExpr jjtn000 = new ASTSubExpr(JJTSUBEXPR);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);String s; String t; String ret = "";
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case LPAR:
      case TICK:
        s = list();
                              ret += s;
        break;
      case NIL:
      case INTEGER:
      case FLOAT:
      case LAMBDA:
      case LET:
      case LETREC:
      case ADD_OP:
      case SUB_OP:
      case CAR:
      case CDR:
      case CONS:
      case IDENTIFIER:
        s = atom();
                               ret += " " + s;
        break;
      default:
        jj_la1[13] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case LPAR:
      case TICK:
        t = list();
                             ret += t;
        break;
      case NIL:
      case INTEGER:
      case FLOAT:
      case LAMBDA:
      case LET:
      case LETREC:
      case ADD_OP:
      case SUB_OP:
      case CAR:
      case CDR:
      case CONS:
      case IDENTIFIER:
        t = atom();
                               ret += " " + t;
        break;
      default:
        jj_la1[14] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
          jjtree.closeNodeScope(jjtn000, true);
          jjtc000 = false;
          jjtn000.name = ret; jjtn000.type = "SubExpr"; {if (true) return ret;}
    } catch (Throwable jjte000) {
          if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
    throw new Error("Missing return statement in function");
  }

  static final public String let() throws ParseException {
 /*@bgen(jjtree) LetExpr */
  ASTLetExpr jjtn000 = new ASTLetExpr(JJTLETEXPR);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);String a, b, c, ret = "(";
    try {
      jj_consume_token(LPAR);
      label_3:
      while (true) {
        jj_consume_token(LPAR);
        a = atom();
        if (jj_2_4(2)) {
          b = list();
        } else {
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case NIL:
          case INTEGER:
          case FLOAT:
          case LAMBDA:
          case LET:
          case LETREC:
          case ADD_OP:
          case SUB_OP:
          case CAR:
          case CDR:
          case CONS:
          case IDENTIFIER:
            b = atom();
            break;
          default:
            jj_la1[15] = jj_gen;
            jj_consume_token(-1);
            throw new ParseException();
          }
        }
        jj_consume_token(RPAR);
          ret += "(" + a + " " + b + ")";
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case LPAR:
          ;
          break;
        default:
          jj_la1[16] = jj_gen;
          break label_3;
        }
      }
      jj_consume_token(RPAR);
      if (jj_2_5(2)) {
        c = list();
      } else {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case NIL:
        case INTEGER:
        case FLOAT:
        case LAMBDA:
        case LET:
        case LETREC:
        case ADD_OP:
        case SUB_OP:
        case CAR:
        case CDR:
        case CONS:
        case IDENTIFIER:
          c = atom();
          break;
        default:
          jj_la1[17] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
          jjtree.closeNodeScope(jjtn000, true);
          jjtc000 = false;
          ret +=  ") " + c; jjtn000.name = ret; jjtn000.type = "car";  {if (true) return ret;}
    } catch (Throwable jjte000) {
          if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
    throw new Error("Missing return statement in function");
  }

  static final public String lambdaExpr() throws ParseException {
 /*@bgen(jjtree) LambdaExpr */
  ASTLambdaExpr jjtn000 = new ASTLambdaExpr(JJTLAMBDAEXPR);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);String s, t; String ret = "";
    try {
      s = list();
      if (jj_2_6(2)) {
        t = list();
      } else {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case NIL:
        case INTEGER:
        case FLOAT:
        case LAMBDA:
        case LET:
        case LETREC:
        case ADD_OP:
        case SUB_OP:
        case CAR:
        case CDR:
        case CONS:
        case IDENTIFIER:
          t = atom();
          break;
        default:
          jj_la1[18] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
          jjtree.closeNodeScope(jjtn000, true);
          jjtc000 = false;
          ret = s + t; jjtn000.name = ret; jjtn000.type = "car"; {if (true) return ret;}
    } catch (Throwable jjte000) {
          if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
    throw new Error("Missing return statement in function");
  }

  static private boolean jj_2_1(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_1(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(0, xla); }
  }

  static private boolean jj_2_2(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_2(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(1, xla); }
  }

  static private boolean jj_2_3(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_3(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(2, xla); }
  }

  static private boolean jj_2_4(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_4(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(3, xla); }
  }

  static private boolean jj_2_5(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_5(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(4, xla); }
  }

  static private boolean jj_2_6(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_6(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(5, xla); }
  }

  static private boolean jj_3R_5() {
    if (jj_scan_token(LPAR)) return true;
    Token xsp;
    while (true) {
      xsp = jj_scanpos;
      if (jj_3R_7()) { jj_scanpos = xsp; break; }
    }
    if (jj_scan_token(RPAR)) return true;
    return false;
  }

  static private boolean jj_3_4() {
    if (jj_3R_4()) return true;
    return false;
  }

  static private boolean jj_3R_21() {
    if (jj_scan_token(LETREC)) return true;
    return false;
  }

  static private boolean jj_3R_4() {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3R_5()) {
    jj_scanpos = xsp;
    if (jj_3R_6()) return true;
    }
    return false;
  }

  static private boolean jj_3R_20() {
    if (jj_scan_token(LET)) return true;
    return false;
  }

  static private boolean jj_3_1() {
    if (jj_3R_4()) return true;
    return false;
  }

  static private boolean jj_3R_19() {
    if (jj_scan_token(CONS)) return true;
    return false;
  }

  static private boolean jj_3R_18() {
    if (jj_scan_token(CDR)) return true;
    return false;
  }

  static private boolean jj_3R_17() {
    if (jj_scan_token(CAR)) return true;
    return false;
  }

  static private boolean jj_3R_16() {
    if (jj_scan_token(SUB_OP)) return true;
    return false;
  }

  static private boolean jj_3R_15() {
    if (jj_scan_token(ADD_OP)) return true;
    return false;
  }

  static private boolean jj_3R_14() {
    if (jj_scan_token(LAMBDA)) return true;
    return false;
  }

  static private boolean jj_3R_13() {
    if (jj_scan_token(IDENTIFIER)) return true;
    return false;
  }

  static private boolean jj_3R_12() {
    if (jj_scan_token(FLOAT)) return true;
    return false;
  }

  static private boolean jj_3R_11() {
    if (jj_scan_token(INTEGER)) return true;
    return false;
  }

  static private boolean jj_3R_9() {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3R_10()) {
    jj_scanpos = xsp;
    if (jj_3R_11()) {
    jj_scanpos = xsp;
    if (jj_3R_12()) {
    jj_scanpos = xsp;
    if (jj_3R_13()) {
    jj_scanpos = xsp;
    if (jj_3R_14()) {
    jj_scanpos = xsp;
    if (jj_3R_15()) {
    jj_scanpos = xsp;
    if (jj_3R_16()) {
    jj_scanpos = xsp;
    if (jj_3R_17()) {
    jj_scanpos = xsp;
    if (jj_3R_18()) {
    jj_scanpos = xsp;
    if (jj_3R_19()) {
    jj_scanpos = xsp;
    if (jj_3R_20()) {
    jj_scanpos = xsp;
    if (jj_3R_21()) return true;
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    return false;
  }

  static private boolean jj_3R_10() {
    if (jj_scan_token(NIL)) return true;
    return false;
  }

  static private boolean jj_3_6() {
    if (jj_3R_4()) return true;
    return false;
  }

  static private boolean jj_3_3() {
    if (jj_3R_4()) return true;
    return false;
  }

  static private boolean jj_3R_8() {
    if (jj_3R_9()) return true;
    return false;
  }

  static private boolean jj_3_2() {
    if (jj_3R_4()) return true;
    return false;
  }
